get_sqo_context reformated ----- don't finished

--- a/core/page/css/layout/page.less
+++ b/core/page/css/layout/page.less
@@ -123,6 +123,10 @@ danger {
 		padding: 1em;
 		overflow: auto;
 
+		pre {
+			z-index: unset;
+		}
+
 		.total_time {
 			position: fixed;
 			right:2em;
