--- a/lib/dedalo/tools/tool_diffusion/html/tool_diffusion_button.phtml
+++ b/lib/dedalo/tools/tool_diffusion/html/tool_diffusion_button.phtml
@@ -5,7 +5,7 @@
 
 	#
 	# GROUPS
-	# dump($ar_diffusion_map, ' ar_diffusion_map ++ '.to_string());
+	// dump($ar_diffusion_map, ' ar_diffusion_map ++ '.to_string(DEDALO_DIFFUSION_DOMAIN));
 	foreach ($ar_diffusion_map as $diffusion_group_tipo => $ar_diffusion_element) {
 	
 		#$html_tool .= "<div class=\"diffusion_group\">";
