--- a/core/page/html/page.phtml
+++ b/core/page/html/page.phtml
@@ -26,7 +26,7 @@
 			const page = await get_instance({
 				model 		: 'page',
 				//mode		: <?php echo json_encode($page_options->mode) ?> || 'edit',
-				elements 	: <?php echo json_encode($page_options->page_elements, JSON_UNESCAPED_UNICODE) ?>
+				context 	: <?php echo json_encode($page_options->context, JSON_UNESCAPED_UNICODE) ?>
 			})
 
 		// page instance build and render
