--- a/core/common/js/labels.phtml
+++ b/core/common/js/labels.phtml
@@ -3,35 +3,14 @@ require_once( DEDALO_CONFIG_PATH .'/config.php');
 /**
 * LABELS 
 */
-$js = '';
 
 $ar_label = label::get_ar_label();
-	#dump($ar_label,"ar_label");
-	#print_r($ar_label);
-
-	#
-	# ARRAY MODE
-	/*
-	foreach ($ar_label as $key => $value) {
-
-		$label = addslashes($value);
-
-		if(!empty($key)) {
-			$js .= "$key:\"$label\",\n";
-		}	
-	}
-	$js = substr($js, 0,-2);
-	$js .= '};';
-	*/
-
 	
-	#
-	# JSON OBJECT MODE
-	# js object formated like person={firstname:"John",lastname:"Doe",age:50,eyecolor:"blue"};
-	$js = 'var get_label=new Object(' . json_handler::encode($ar_label,JSON_UNESCAPED_UNICODE) . ')';
+
+# JSON OBJECT MODE
+# js object formated like person={firstname:"John",lastname:"Doe",age:50,eyecolor:"blue"};
+$js = 'const get_label=new Object(' . json_handler::encode($ar_label,JSON_UNESCAPED_UNICODE) . ')';
 
 
 header("Content-type: text/javascript; charset=utf-8");
 print $js;
-exit();
-?>
