Apply new request model (dd_request) to page

--- a/core/page/css/layout/page.less
+++ b/core/page/css/layout/page.less
@@ -124,7 +124,9 @@ danger {
 		overflow: auto;
 
 		pre {
-			z-index: unset;
+			z-index: 1;
+			outline: 1px solid #cad0d4;
+			overflow-wrap: anywhere;
 		}
 
 		.total_time {
