Apply new request model (dd_request) to search

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -99,7 +99,8 @@
 		// flex config
 		display: flex;
 		flex-wrap: wrap;
-		flex: 0 1 50%; // <'flex-grow'> <'flex-shrink'>? || <'flex-basis'>
+		// flex: 0 1 50%; // <'flex-grow'> <'flex-shrink'>? || <'flex-basis'>
+		flex: 1 1 50%; // testing 11-06-2020
 		align-content: flex-start; // maintain items flow from top to bottom
 		//flex: 0 1 auto;
 		z-index: auto; // (!) important to allow fullscreen configs like tinymce
