--- a/core/page/css/layout/reset.less
+++ b/core/page/css/layout/reset.less
@@ -85,7 +85,8 @@
 		background-color: rgba(240, 248, 255, 0.9);
 		padding: 1em;
 		font-family: monospace;
-		z-index: 9999;
+		z-index: 99999;
+		white-space: break-spaces;
 	}
 	// svg,
 	object {
