Fix ontology properties errors

--- a/core/dd/css/dd_edit.less
+++ b/core/dd/css/dd_edit.less
@@ -58,15 +58,15 @@ input, textarea {
 	width: 100%;
 }
 
-.wraper_properties {
+.wraper_propiedades {
 	width: 100%;
 	height: 62vh;
 	//height: 100%;
 	//background-color: #ccca76;
 	}
-	.wraper_properties .properties_label {
+	.wraper_propiedades .propiedades_label {
 	}
-	.wraper_properties .properties_textarea {
+	.wraper_propiedades .propiedades_textarea {
 		width: 100%;
 		height: 240px;
 		margin-top: 4px;
