Reduced portal list rows height from 58px to 32px

--- a/lib/dedalo/component_portal/css/component_portal.less
+++ b/lib/dedalo/component_portal/css/component_portal.less
@@ -509,7 +509,8 @@
 				font-size: 11px;
 			}
 			.column.component_text_area, .column.component_autocomplete_hi ul.css_autocomplete_ul, column.component_autocomplete ul.css_autocomplete_ul {
-				max-height: 58px;
+				// max-height: 58px;
+				max-height: 32px;
 				overflow: hidden;
 			}
 			.column.id_column {
