--- a/lib/dedalo/component_text_area/css/component_text_area.less
+++ b/lib/dedalo/component_text_area/css/component_text_area.less
@@ -658,6 +658,9 @@ div.mce-tinymce.mce-fullscreen {
 }
 /* component_tools_container in portal_list mode
 -------------------------------------------------- */
+.css_wrap_text_area_portal_list {
+	padding: 0;
+}
 .css_wrap_text_area_portal_list > .component_tools_container {
 		position: absolute;
 	}
