Add capacity to structure edit 'properties'

--- a/lib/dedalo/dd/css/dd_edit.less
+++ b/lib/dedalo/dd/css/dd_edit.less
@@ -125,7 +125,8 @@ input, textarea {
 
 /* JSON EDITOR
 --------------------------------------------- */
-#editor_json {
+// #editor_json {
+.editor_json_container {
 	// height:277px; 
 	height:100%;	
 	width:100%;
