--- a/lib/dedalo/dd/css/dd_list.less
+++ b/lib/dedalo/dd/css/dd_list.less
@@ -197,6 +197,15 @@ select {
 .divLineasInfo pre {
   background-color: #e9dd9f;
   opacity: 0.8;
+
+}
+.divLineasInfo.div_properties pre {
+  // background-color: #5fd368;
+  // opacity: 0.8;
+  background-color: #5fd368;
+  opacity: .8;
+  // color: #fff;
+  border-radius: 3px;
 }
 .div_termino {
   display: none;
@@ -370,6 +379,10 @@ table.table_list_ts_used td {
   line-height: 14px;
   position: relative;
   top: 0px;
+
+  &.btn_properties {
+    background-color: #4dcb74;
+  }
 }
 .cuadroU:active {
   background-color: #999999;
