Fix dd edit issues and appearance colors

--- a/lib/dedalo/dd/css/dd_edit.less
+++ b/lib/dedalo/dd/css/dd_edit.less
@@ -136,5 +136,13 @@ input, textarea {
 	}
 }
 
+@properties_bg_color : #1b531f;
+
+#properties_editor_json {
+	.jsoneditor-menu {
+		background-color: @properties_bg_color;
+	}
+}
+
 
 
