--- a/core/dd/css/dd_list.less
+++ b/core/dd/css/dd_list.less
@@ -1,4 +1,4 @@
-
+@properties_bg_color : #1b531f;
 
 
 #wrapGeneral {
@@ -209,14 +209,15 @@ select {
 }
 // properties
 .divLineasInfo.div_properties pre {
-		background-color: #3b8858;
-		opacity: 0.8;
-		color: #ffffff;
-		border-radius: 3px;
+	background-color: @properties_bg_color;
+	opacity: .8;
+	color: #ffffff;
+	border-radius: 3px;
 }
 .cuadroU.btn_properties {
-	background-color: #3b8858;
+	background-color: @properties_bg_color;
 	color: #ffffff;
+	opacity: .8;
 }
 
 
