--- a/core/dd/html/dd_edit.phtml
+++ b/core/dd/html/dd_edit.phtml
@@ -92,23 +92,6 @@ print js::build_tag(DEDALO_CORE_URL . '/dd/js/dd_edit.js');
 								</select>
 							</td>
 
-							<?php /*
-							<!-- USABLE EN INDEXACION -->
-							<td align="center" valign="top"><?php echo $usable_en_title . $indexacion_title ?>
-									<?php
-									$selectBGcolor = false ;
-									if($usableIndex=='si') $selectBGcolor = "background-color:#090;" ;
-									if($usableIndex=='no') $selectBGcolor = "background-color:#FF0000;" ;
-									?>
-									<br>
-									<select name="usableIndex" id="usableIndex" <?php echo $selectBGcolor ?> >
-										<option value="si" <?php if (!(strcmp('si', $usableIndex))) {echo "selected=\"selected\" ";} ?> ><?php echo $si_title ?></option>
-										<option value="no" <?php if (!(strcmp('no', $usableIndex))) {echo "selected=\"selected\" ";} ?> ><?php echo $no_title ?></option>
-									</select>
-									<div style="width:18px; height:18px;<?php echo $selectBGcolor ?>display:inline-block; vertical-align: middle">&nbsp;</div>
-							</td>
-							*/ ?>
-
 							<!-- MODELO -->
 							<td align="center"  valign="top">
 								<?php
@@ -196,225 +179,99 @@ print js::build_tag(DEDALO_CORE_URL . '/dd/js/dd_edit.js');
 					<td class="td_header"> <?php echo $informacion_title ?></td>
 				</tr>
 
+
 				<!-- OBSERVACIONES -->
 				<?php echo $descriptors_tr_obs_html ?>
+
 
 				<!-- RELACIONES -->
 				<tr>
 					<td>
-							<div class="div_wraper wraper_relations">
-								<div class="left_div" style="padding-top:6px;">
-									<?php echo $relaciones_title ?>
-								</div>
-								<div class="right_div">
-									<div id="div_rel" style=" margin:0px; padding:0px"><!-- Ajax lista de relaciones --></div>
-								</div>
-							</div><!-- /div_wraper -->
+						<div class="div_wraper wraper_relations">
+							<div class="left_div" style="padding-top:6px;">
+								<?php echo $relaciones_title ?>
+							</div>
+							<div class="right_div">
+								<div id="div_rel" style=" margin:0px; padding:0px"><!-- Ajax lista de relaciones --></div>
+							</div>
+						</div><!-- /div_wraper -->
 					</td>
 				</tr>
 				<!-- /INFORMACION -->
 
 
 
-				<!-- OTRA INFO -->
-				<!-- HEADER OTRA INFO -->
-				<tr>
-					<td class="td_header" onClick="simpleToogleTBODY('otraInfo',this);redimensionarVentana();" style="cursor:pointer">
-						<?php echo $otra_informacion_title ?> <div class="flecha_close_tboby"></div>
-					</td>
-				</tr>
-
-				<!-- TBODY OTRA INFO -->
-				<tbody id="otraInfo">
-
-
-				<!-- propiedades (JSON) -->
+				<!-- V5 Propiedades -->
 				<?php if (SHOW_DEBUG===true || SHOW_DEVELOPER===true) { ?>
 				<tr>
-					<td>
-						<div class="wraper_propiedades">
-							<?php /*
-							<label class="left_div propiedades_label">propiedades (JSON)</label>
-							*/ ?>
-							<textarea id="propiedades" name="propiedades" class="propiedades_textarea"><?php echo $propiedades ?></textarea>
-							<?php #dump($propiedades, ' propiedades ++ '.to_string()); ?>
-							<div id="editor_json" class="editor_json_container"></div>
-							<script>
-							var propiedades_textarea_element = document.getElementById('propiedades')
-							  	propiedades_textarea_element.style.display = 'none';
-							  var options = {
-							    mode: 'code',
-							    modes: ['code', 'form', 'text', 'tree', 'view'], // allowed modes
-							    error: function (err) {
-							      alert(err.toString());
-							    }
-							  };
-							  // create the editor
-							  var container = document.getElementById('editor_json');
-							  var editor 	= new JSONEditor(container, options, <?php echo !empty($propiedades) ? (string)$propiedades : '""' ?>);
-							 	//console.log(editor);
-
-							// Send JSON text to input and force save
-							// document.getElementById('submit_button').onclick = function () {
-							//	    $('#propiedades')
-							//	    	.val(editor.getText())
-							//	    	.trigger('change');
-							// };
-							</script>
-							<?php /**/ ?>
-						</div><!-- /div_wraper -->
+					<td class="td_header" onClick="simpleToogleTBODY('propiedades_group',this);redimensionarVentana();" style="cursor:pointer">
+						V5 Propiedades <div class="flecha_open_tboby"></div>
 					</td>
 				</tr>
+				<tbody id="propiedades_group">
+					<tr>
+						<td>
+							<div class="wraper_propiedades hide">								
+								<textarea id="propiedades" name="propiedades" class="propiedades_textarea"><?php echo $propiedades ?></textarea>
+								<div id="editor_json" class="editor_json_container"></div>
+								<script>
+								const propiedades_textarea_element = document.getElementById('propiedades')
+									  propiedades_textarea_element.style.display = 'none';
+								const propiedades_options = {
+									mode	: 'code',
+									modes	: ['code', 'form', 'text', 'tree', 'view'], // allowed modes
+									error	: function (err) {
+								    	alert(err.toString());
+								    }
+								  }
+								  // create the editor
+									const propiedades_container	= document.getElementById('editor_json');
+									const propiedades_editor	= new JSONEditor(propiedades_container, propiedades_options, <?php echo !empty($propiedades) ? (string)$propiedades : '""' ?>);
+								</script>
+							</div><!-- /div_wraper -->
+						</td>
+					</tr>
+				</tbody>
 				<?php } #if (SHOW_DEBUG) ?>
+				
 
-				<!-- properties (JSON) -->
+
+				<!-- V6 properties-->
 				<?php if (SHOW_DEBUG===true || SHOW_DEVELOPER===true) { ?>
 				<tr>
-					<td>
-						<div class="wraper_propiedades">
-							<?php
-							$properties_text = json_encode($properties);
-							?>
-							<h1>Properties</h1>
-							<textarea id="properties" name="properties" class="properties_textarea"><?php echo $properties_text ?></textarea>
-							<?php #dump($properties, ' properties ++ '.to_string()); ?>
-							<div id="editor_json" class="editor_json_container"></div>
-							<script>
-							const properties_textarea_element = document.getElementById('properties')
-								  properties_textarea_element.style.display = 'none';
-							const properties_options = {
-							    mode: 'code',
-							    modes: ['code', 'form', 'text', 'tree', 'view'], // allowed modes
-							    error: function (err) {
-							      alert(err.toString());
-							    }
-							  }
-							// create properties_editor
-								const properties_container	= document.getElementById('editor_json');
-								const properties_editor		= new JSONEditor(properties_container, properties_options, <?php echo !empty($properties_text) ? (string)$properties_text : '""' ?>);
-							 	//console.log(editor);
-
-							// Send JSON text to input and force save
-							// document.getElementById('submit_button').onclick = function () {
-							//	    $('#properties')
-							//	    	.val(editor.getText())
-							//	    	.trigger('change');
-							// };
-							</script>
-							<?php /**/ ?>
-						</div><!-- /div_wraper -->
+					<td class="td_header" onClick="simpleToogleTBODY('properties_group',this);redimensionarVentana();" style="cursor:pointer">
+						V6 Properties <div class="flecha_close_tboby"></div>
 					</td>
 				</tr>
+				<tbody id="properties_group">					
+					<tr>
+						<td>
+							<div class="wraper_propiedades">
+								<?php
+								$properties_text = json_encode($properties);
+								?>
+								<textarea id="properties" name="properties" class="properties_textarea"><?php echo $properties_text ?></textarea>
+								<div id="properties_editor_json" class="editor_json_container"></div>
+								<script>
+								const properties_textarea_element = document.getElementById('properties')
+									  properties_textarea_element.style.display = 'none';
+								const properties_options = {
+									mode	: 'code',
+									modes	: ['code', 'form', 'text', 'tree', 'view'], // allowed modes
+									error	: function (err) {
+								    	alert(err.toString());
+								    }
+								  }
+								// create properties_editor
+									const properties_container	= document.getElementById('properties_editor_json');
+									const properties_editor		= new JSONEditor(properties_container, properties_options, <?php echo !empty($properties_text) ? (string)$properties_text : '""' ?>);
+								</script>
+							</div>
+						</td>
+					</tr>
+				</tbody>
 				<?php } #if (SHOW_DEBUG) ?>
-
-
-				<!-- HIERARCHIE INFO -->
-				<tr class="row_border_bottom">
-					<td>
-					 <table class="table_hierarchy_info">
-						<?php /*
-						<!-- PARENTS -->
-						<tr>
-							<td align="right" valign="top" nowrap  ><?php echo $jerarquia_title ?>: <?php echo $padres_title ?></td>
-							<td align="center"  valign="top" nowrap bgcolor="#999999">
-								<?php
-								# PARENTS : SACAMOS RECURSIVAMENTE TODOS LOS PADRES QUE TENDRÁ EL TESAURO ACTUAL
-								$matriz = $ar_parents_of_this;	#$padresArray['termino'];#print_r($matriz);
-								$nivel = 0 ;
-								if(is_array($matriz)) {
-										$niveles = count($matriz)-1 ;
-										foreach( $matriz as $myKey=>$value5) {
-												echo "$nivel_title " ;
-												echo " $nivel <br>";
-												$nivel++ ;
-										}
-								}
-								?>
-							</td>
-							<td align="left" style="font-size:9px;">
-								<?php
-								# ordenamos inversamente los padres
-								$nivel = 0 ;
-								if(is_array($matriz)) {
-										krsort($matriz);
-										$niveles = count($matriz)-1 ;
-										foreach( $matriz as $key => $value) {
-												echo $value . '<br> ';
-												$nivel++ ;
-										}
-								}
-								?>
-							</td>
-						</tr>
-						<!-- /PARENTS -->
-
-
-						<!-- HERMANOS -->
-						<tr id="hermanosTR">
-						 <td align="right" valign="top" nowrap  ><?php echo $hermanos_title ?> </td>
-						 <td align="center" valign="top" nowrap bgcolor="#999999">
-								<?php echo "$nivel_title ". ($nivel)   ?>
-						 </td>
-						 <td align="left">
-								<div style="max-height:70px; overflow:auto" >
-								<?php
-								$nivel +1 ;
-
-								# HERMANOS : Array de hermanos del término actual
-								if(is_array($ar_siblings)) {
-									foreach($ar_siblings as $current_terminoID) {
-										$ar_hermanosNombres[]	= RecordObj_dd::get_termino_by_tipo($current_terminoID);
-									}
-									echo implode(', ',$ar_hermanosNombres);
-								}
-								?>
-								</div>
-						 </td>
-						</tr>
-						<!-- /HERMANOS -->
-
-
-						<!-- HIJOS -->
-						<tr id="hijosTR">
-						 <td align="right" nowrap  ><?php echo $hijos_directos_title ?></td>
-						 <td align="center" nowrap bgcolor="#999999"  ><?php echo "$nivel_title " . ($nivel+1);  ?></td>
-						 <td align="left"  >
-								<div style="max-height:70px; overflow:auto" >
-								<?php
-								# HIJOS : Mostramos el deglose de hijos del término actual desde el array de datos
-								$sizeOf_hijosArray = sizeof($hijosArray);
-								$n=0;
-								if(is_array($hijosArray)) foreach($hijosArray as $hijoActual) {
-										#echo $hijoActual ;
-										echo RecordObj_dd::get_termino_by_tipo($hijoActual);
-										$n++;
-										if($n < $sizeOf_hijosArray) echo ', ';
-										#echo ",($sizeOf_hijosArray)";
-								}
-								?>
-								</div>
-						 </td>
-						</tr>
-						<!-- /HIJOS -->
-						<?php */ ?>
-
-						<!-- PARENT : Dependiente de (padre) -->
-						<tr >
-						 <td align="right" nowrap  ><?php echo $dependiente_de_title ?> </td>
-						 <td align="center" nowrap ><?php echo $parentInicial = $parent ; ?></td>
-						 <td align="left" nowrap  >
-								<?php echo $cambiar_a_title ?>
-								<input name="parent" type="text" id="parent" style="width:90px; text-align:center" value="<?php echo $parent ?>" onFocus="myfocus(this)" onBlur="myblur(this)">
-								<span class="anotacionTexto">(<?php echo $al_cambiar_el_padre_title ?>)</span>
-						 </td>
-						</tr>
-						<!-- /PARENT : Dependiente de (padre) -->
-
-					 </table><!-- /table_hierarchy_info -->
-					</td>
-				</tr>
-
-				</tbody><!-- /otraInfo -->
+				
 
 
 
@@ -436,7 +293,7 @@ print js::build_tag(DEDALO_CORE_URL . '/dd/js/dd_edit.js');
 							// Send JSON text to input and force update
 							document.getElementById('submit_button').onclick = function () {
 								$(propiedades_textarea_element)
-										.val(editor.getText())
+										.val(propiedades_editor.getText())
 										.trigger('change');
 								$(properties_textarea_element)
 										.val(properties_editor.getText())
