--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -191,7 +191,7 @@
 			//flex: 1 1 32.5%;
 			flex: 1 1 49%;
 
-			&#search_query_object_test_enviroment {
+			&#search_query_object_test_enviroment, &#dedalo_api_test_enviroment {
 				flex: 1 1 100%;
 				background-color: #3883fa;
 
@@ -222,15 +222,33 @@
 				}
 			}//end php_info
 
-			&#search_query_object_test_enviroment {
+			&#search_query_object_test_enviroment, &#dedalo_api_test_enviroment {
 
-				#json_editor_container {
+				.editor_json {
 					height: 50vh;
+					min-height: 300px;
 
 					.jsoneditor {
 						z-index: 1;
 					}
 				}
+			}
+
+			&#dedalo_api_test_enviroment {
+				
+				>.widget_label {
+					background-color: #21984b;
+				}
+				>.widget_body {
+					background-color: #c0e4cd;
+				}				
+
+				.editor_json {
+					height: 30vh;
+				}
+				.jsoneditor-menu {
+					background-color: #21984b; // green instaed default blue
+				}				
 			}
 
 			>.widget_label {
@@ -250,6 +268,10 @@
 					float: right;
 					margin: 0;
 					cursor: default;
+				}
+
+				>* {
+					pointer-events: none;
 				}
 			}
 			>.widget_body {
@@ -2488,32 +2510,56 @@
 
 
 
-// forms (area thesaurus)
-	.form_container {
-		padding-top: 1em;
+// content_data area
+	.content_data.area {
+		label {
+			padding: 0.5em;
+		}
 		input {
 			border-radius: 2px;
 			padding: 0.5em;
-			width: 100%;
-			margin: 0;
+			// width: 100%;
 			height: 2.5em;
+			margin: 0;			
+			margin-top: 0.5em;
 			margin-bottom: 0.5em;
+			margin-right: 0.5em;
 			border: 1px solid #dadada;
 			font-size: 1em;
+		}
+		button {
+			&.border {
+				border: 1px solid #dadada;
+			}			
+			display: inline-block;
+			font-size: 1em;
+		}
 
-			&.mandatory {
-				border-left: 2px solid red;
+	// forms (area thesaurus)
+		.form_container {
+			padding-top: 1em;
+			
+			input {
+				width: 100%;
+				&.mandatory {
+					border-left: 2px solid red;
 
-				&.empty {
-					border-right: 2em solid red;
+					&.empty {
+						border-right: 2em solid red;
+					}
 				}
+			}
+
+			button {
+				border: 1px solid #dadada;
 			}
 		}
 
-		button {
-			border: 1px solid #dadada;
-		}
 	}
+
+
+
+
 
 
 
