--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -442,9 +442,10 @@
 	.wrapper_section {
 
 		>.label {
-			position: absolute;
-			left: 54px;
-			margin-top: 1px;
+			// position: absolute;
+			// left: 54px;
+			// margin-top: 1px;
+			margin-bottom: 0.2em;
 			font-size: 1.2em;
 
 			@media screen and (max-width: @width_break_point_1) {
