--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -238,20 +238,20 @@
 			}
 
 			&#dedalo_api_test_enviroment {
-				
+
 				>.widget_label {
 					background-color: #21984b;
 				}
 				>.widget_body {
 					background-color: #c0e4cd;
-				}				
+				}
 
 				.editor_json {
 					height: 30vh;
 				}
 				.jsoneditor-menu {
 					background-color: #21984b; // green instaed default blue
-				}				
+				}
 			}
 
 			>.widget_label {
@@ -961,12 +961,8 @@
 								}
 							}
 							canvas {
-								background-color: #59d61d;
+								background-color: #f5f5f5;
 
-								// experimental to avoid overflow component width (26-04-2020)
-								// da problemas. Desactivado de momento
-									// max-width: 100%;
-									// overflow: hidden;
 							}
 							.canvas[resize] {
 								height: 100%;
@@ -1315,7 +1311,7 @@
 				//  				}
 				// 	}
 				// }
-			
+
 
 			>.label {
 				padding: 1em;
@@ -1545,18 +1541,18 @@
 
 			>.paginator {
 				padding: 0;
-			}//end >.paginator			
+			}//end >.paginator
 
 			>.content_data {
 				// background-color: #B9DFF6;
-				// flex: 1 0 calc(80% - 2em);				
+				// flex: 1 0 calc(80% - 2em);
 				display: flex;
 				flex: 1 1 100%;
 				flex-wrap: wrap;
 				//flex-flow: column;
 				align-items: flex-start;
 				padding: 1em;
-				padding-top: 0.5em;				
+				padding-top: 0.5em;
 
 				@media screen and (max-width: @width_break_point_1) {
 					flex: 1 1 100%;
@@ -1588,14 +1584,14 @@
 
 				>.inputs_container {
 					flex: 1 1 auto;
-				}				
+				}
 
 				//&.nowrap {
 				//	flex-wrap: nowrap;
 				//	flex-flow: nowrap;
 				//}
 			}//end >.content_data
-			
+
 			@media screen and (max-width: 1280px) {
 				// flex-basis: 100% !important;
 			}
@@ -2527,7 +2523,7 @@
 			padding: 0.5em;
 			// width: 100%;
 			height: 2.5em;
-			margin: 0;			
+			margin: 0;
 			margin-top: 0.5em;
 			margin-bottom: 0.5em;
 			margin-right: 0.5em;
@@ -2537,7 +2533,7 @@
 		button {
 			&.border {
 				border: 1px solid #dadada;
-			}			
+			}
 			display: inline-block;
 			font-size: 1em;
 		}
@@ -2545,7 +2541,7 @@
 	// forms (area thesaurus)
 		.form_container {
 			padding-top: 1em;
-			
+
 			input {
 				width: 100%;
 				&.mandatory {
