--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -595,7 +595,8 @@
 		&.list {
 			position: relative;
 			background-color: #f7f7f7;
-			display: grid;
+			// display: grid;
+			display: contents;
 			width: 100%;
 			height: 100%;
 			margin-right: 0.5em;
@@ -643,6 +644,7 @@
 				word-wrap: break-word;
 				word-break: break-all;
 				overflow: hidden;
+				outline: 1px solid rgba(216,216,216,.43);
 
 				.component_autocomplete & {
 					display: inline-block;
@@ -1704,11 +1706,30 @@
 
 
 
+// section
+	.wrapper_section {
+		.list_body {
+			display: grid;
+			// background-color: #e1d44a;
+
+			>.header_wrapper_list {
+				display: contents;
+			}
+
+			>.content_data.section {
+				display: contents;
+			}
+		}
+	}
+	
+
+
+
 // header_wrapper_list
 	.header_wrapper_list {
 		position: sticky;
 		top: 2em; // default
-		background-color: #2c2c2e;
+		// background-color: #2c2c2e;
 		color: #efefef;
 		//display: flex;
 		width: 100%;
@@ -1732,6 +1753,7 @@
 			padding: 1em;
 			padding-top: 0.5em;
     		padding-bottom: 0.5em;
+    		background-color: #2c2c2e;
 
 			>div {
 				//display: flex;
