Fix login set first root password script when no password data exists case

--- a/lib/dedalo/login/html/login_set_psw.phtml
+++ b/lib/dedalo/login/html/login_set_psw.phtml
@@ -11,7 +11,7 @@
 			
 			// Inputs
 				$html_content .= "<div id=\"form_container\">";
-				$html_content .= "Please set a password for <strong>root</strong> user to manage the system.<br>
+				$html_content .= "Please set a password for <strong>root</strong> user to manage the system. (".DEDALO_DATABASE_CONN.")<br>
 									<span class=\"warning\">
 									IMPORTANT: Remember this password because you can not change it later.
 									</span>";
