Fix dd edit relation window issues

--- a/lib/dedalo/dd/css/dd_edit.less
+++ b/lib/dedalo/dd/css/dd_edit.less
@@ -13,6 +13,10 @@ input, textarea {
 	padding: 3px;
 }
 
+select {
+	font-size: 1.25em;
+}
+
 #wrapGeneral {
 	overflow: visible;
 	top:0;
@@ -36,6 +40,8 @@ input, textarea {
 	display: table;	
 }
 
+
+
 #SelectLangList { 
 	width:50px; 
 	margin-left:2px; 
@@ -58,7 +64,8 @@ input, textarea {
 
 .wraper_propiedades {
 	width: 100%;
-	height: 42vh; 
+	// height: 42vh; 
+	height: 64vh;
 	//background-color: #ccca76;
 	}
 	.wraper_propiedades .propiedades_label {
