Fix dd edit relation window issues

--- a/lib/dedalo/dd/html/dd_list.phtml
+++ b/lib/dedalo/dd/html/dd_list.phtml
@@ -42,7 +42,7 @@ echo trim(css::get_css_link_code());
 	* Se le pasa al loop "openTrackedDivs" para que pase en cada ciclo el listado de 
 	* terminos a resaltar (tipo 525,632,874)
 	*/
-	const terminoIDresalte = '<?php echo $terminoIDlist ?>';	//alert(terminoIDresalte);
+	const terminoIDresalte = '<?php echo $terminoIDlist ?>';
 </script>
 <?php
 # JS
